feat(fdm): discover misc-boxes with code

--- a/raw/.config/fdm/config
+++ b/raw/.config/fdm/config
@@ -11,10 +11,6 @@ account "acc_hold"
         "${hold_dir}"
     }
 
-$path_xyz = "/home/main/.local/share/mail/raw/xyz"
-$path_eth = "/home/main/.local/share/mail/raw/eth"
-$path_outlook = "/home/main/.local/share/mail/raw/outlook"
-$path_gmail = "/home/main/.local/share/mail/raw/gmail"
 account "acc_raw_inbox"
     maildirs {
         "/home/main/.local/share/mail/raw/xyz/.INBOX"
@@ -29,14 +25,42 @@ account "acc_raw_sent"
         "/home/main/.local/share/mail/raw/outlook/.Sent"
         "/home/main/.local/share/mail/raw/gmail/.[Gmail].E-mails enviados"
     }
-# other folders that we would like fdm to monitor
 account "acc_raw_misc"
     maildirs {
-        "${path_xyz}/.Spam"
-        "${path_xyz}/.Trash"
-        "${path_outlook}/.Junk"
-        "${path_outlook}/.Deleted"
-        "${path_gmail}/.[Gmail].Spam"
+        "/home/main/.local/share/mail/raw/eth/.Archive"
+        "/home/main/.local/share/mail/raw/eth/.Calendar"
+        "/home/main/.local/share/mail/raw/eth/.Calendar.Birthdays"
+        "/home/main/.local/share/mail/raw/eth/.Contacts"
+        "/home/main/.local/share/mail/raw/eth/.Conversation History"
+        "/home/main/.local/share/mail/raw/eth/.Deleted Items"
+        "/home/main/.local/share/mail/raw/eth/.Drafts"
+        "/home/main/.local/share/mail/raw/eth/.Journal"
+        "/home/main/.local/share/mail/raw/eth/.Junk Email"
+        "/home/main/.local/share/mail/raw/eth/.Notes"
+        "/home/main/.local/share/mail/raw/eth/.Outbox"
+        "/home/main/.local/share/mail/raw/eth/.Tasks"
+        "/home/main/.local/share/mail/raw/eth/.Trash"
+        "/home/main/.local/share/mail/raw/eth/.Utkast"
+        "/home/main/.local/share/mail/raw/gmail/.[Gmail].Com estrela"
+        "/home/main/.local/share/mail/raw/gmail/.[Gmail].Importante"
+        "/home/main/.local/share/mail/raw/gmail/.[Gmail].Lixeira"
+        "/home/main/.local/share/mail/raw/gmail/.[Gmail].Rascunhos"
+        "/home/main/.local/share/mail/raw/gmail/.[Gmail].Spam"
+        "/home/main/.local/share/mail/raw/outlook/.Archive"
+        "/home/main/.local/share/mail/raw/outlook/.Deleted"
+        "/home/main/.local/share/mail/raw/outlook/.Drafts"
+        "/home/main/.local/share/mail/raw/outlook/.Junk"
+        "/home/main/.local/share/mail/raw/outlook/.Notes"
+        "/home/main/.local/share/mail/raw/outlook/.Outbox"
+        "/home/main/.local/share/mail/raw/outlook/.Problèmes de synchronisation"
+        "/home/main/.local/share/mail/raw/outlook/.Problèmes de synchronisation.Conflits"
+        "/home/main/.local/share/mail/raw/outlook/.Problèmes de synchronisation.Échecs du serveur"
+        "/home/main/.local/share/mail/raw/outlook/.Problèmes de synchronisation.Échecs locaux"
+        "/home/main/.local/share/mail/raw/xyz/.Archive"
+        "/home/main/.local/share/mail/raw/xyz/.Drafts"
+        "/home/main/.local/share/mail/raw/xyz/.Spam"
+        "/home/main/.local/share/mail/raw/xyz/.Starred"
+        "/home/main/.local/share/mail/raw/xyz/.Trash"
     }
 # }}}
 
