--- a/raw/.config/neomutt/box/specific/eth/specific.conf
+++ b/raw/.config/neomutt/box/specific/eth/specific.conf
@@ -1,7 +1,10 @@
 # box {{{
 set my_box_relative_path = "eth"
 set folder = "$my_mail_raw_absolute_path/$my_box_relative_path"
-set record = "+.Sent Items"
+# NOTE:
+# no longer need a manual copy; outlook auto-registers sent mail
+# previously: set record = "+.Sent Items"
+set record = ""
 # }}}
 
 macro index sb "\
