refactor(neomutt): full-pipeline bind -> box/common

--- a/raw/.config/neomutt/box/common/box.conf
+++ b/raw/.config/neomutt/box/common/box.conf
@@ -36,4 +36,12 @@ macro index yt "\
 ss\
 " "move to all/trash"
 
+macro pager,index sa "\
+sm\
+<enter-command>set wait_key=no<Return>\
+<shell-escape>clear<Return>\
+<shell-escape>"$my_conf_dmail/work.sh" pipe<Return>\
+<enter-command>set wait_key=yes<Return>\
+" "pipeline"
+
 # vim: filetype=neomuttrc foldmethod=marker
