feat(neomutt): generate box/specific/multi.conf

--- a/raw/.config/neomutt/box/specific/multi.conf
+++ b/raw/.config/neomutt/box/specific/multi.conf
@@ -1,9 +1,10 @@
 macro index ca "\
 <enter-command>\
 virtual-mailboxes \
-\"_XYZ\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/xyz/\\..*/\" \
-\"_OUTLOOK\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/outlook/\\..*/\" \
-\"_ETH\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/eth/\\..*/\" \
+\"| xyz\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/xyz/\\..*/\" \
+\"| outlook\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/outlook/\\..*/\" \
+\"| eth\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/eth/\\..*/\" \
+\"| gmail\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/gmail/\\..*/\" \
 <Return>\
 <check-stats>\
 " "box all"
@@ -14,6 +15,7 @@ unvirtual-mailboxes \
 \"notmuch://?query=folder:/$my_mail_raw_relative_path/xyz/\\..*/\" \
 \"notmuch://?query=folder:/$my_mail_raw_relative_path/outlook/\\..*/\" \
 \"notmuch://?query=folder:/$my_mail_raw_relative_path/eth/\\..*/\" \
+\"notmuch://?query=folder:/$my_mail_raw_relative_path/gmail/\\..*/\" \
 <Return>\
 <check-stats>\
 " "unbox all"
