feat(neomutt): generate box-specific confs

--- a/raw/.config/neomutt/box/specific/gmail/specific.conf
+++ b/raw/.config/neomutt/box/specific/gmail/specific.conf
@@ -1,12 +1,12 @@
 # box {{{
-set folder = "$my_mail_raw_absolute_path/outlook"
+set folder = "$my_mail_raw_absolute_path/gmail"
 set record = ""
 # }}}
 
 macro index sb "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape>$my_conf_dmail/mbsync.sh test -- outlook<Return>\
+<shell-escape>$my_conf_dmail/mbsync.sh test -- gmail<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
 " "push to remote"
@@ -14,16 +14,16 @@ ss\
 macro index /b "\
 <enter-command>\
 exec vfolder-from-query<Return>\
-folder:/$my_mail_raw_relative_path\\/outlook/ and \
+folder:/$my_mail_raw_relative_path\\/gmail/ and \
 " "query box"
 
 # compose {{{
 source "$my_conf_neomutt/box/common/compose.conf"
 
-set from = "shengdi@outlook.de"
-my_hdr Reply-To: "shengdi@outlook.de"
+set from = "shengdishcchen@gmail.com"
+my_hdr Reply-To: "shengdishcchen@gmail.com"
 
-set sendmail = "$my_conf_dmail/msmtp.sh --account outlook"
+set sendmail = "$my_conf_dmail/msmtp.sh --account gmail"
 # }}}
 
 # vim: filetype=neomuttrc foldmethod=marker
