--- a/raw/.config/neomutt/box/specific/xyz/specific.conf
+++ b/raw/.config/neomutt/box/specific/xyz/specific.conf
@@ -1,13 +1,12 @@
 # box {{{
-set my_box_relative_path = "xyz"
-set folder = "$my_mail_raw_absolute_path/$my_box_relative_path"
-set record = ""  # proton auto-registers sent mail
+set folder = "$my_mail_raw_absolute_path/xyz"
+set record = ""
 # }}}
 
 macro index sb "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -c \"$my_conf_root/mbsync/config\" -V XYZ<Return>\
+<shell-escape>$my_conf_dmail/mbsync.sh test -- xyz<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
 " "push to remote"
@@ -15,15 +14,14 @@ ss\
 macro index /b "\
 <enter-command>\
 exec vfolder-from-query<Return>\
-folder:/$my_mail_raw_relative_path\\/$my_box_relative_path/ and \
+folder:/$my_mail_raw_relative_path\\/xyz/ and \
 " "query box"
 
 # compose {{{
 source "$my_conf_neomutt/box/common/compose.conf"
 
-set my_mail_addr = "me@shengdichen.xyz"
-set from = "$my_mail_addr"
-my_hdr Reply-To: "$my_mail_addr"
+set from = "me@shengdichen.xyz"
+my_hdr Reply-To: "me@shengdichen.xyz"
 
 set sendmail = "$my_conf_dmail/msmtp.sh --account xyz"
 # }}}
