--- a/raw/.config/neomutt/box/specific/eth/specific.conf
+++ b/raw/.config/neomutt/box/specific/eth/specific.conf
@@ -1,16 +1,12 @@
 # box {{{
-set my_box_relative_path = "eth"
-set folder = "$my_mail_raw_absolute_path/$my_box_relative_path"
-# NOTE:
-# no longer need a manual copy; outlook auto-registers sent mail
-# previously: set record = "+.Sent Items"
+set folder = "$my_mail_raw_absolute_path/eth"
 set record = ""
 # }}}
 
 macro index sb "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -c \"$my_conf_root/mbsync/config\" -V ETH<Return>\
+<shell-escape>$my_conf_dmail/mbsync.sh test -- eth<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
 " "push to remote"
@@ -18,15 +14,14 @@ ss\
 macro index /b "\
 <enter-command>\
 exec vfolder-from-query<Return>\
-folder:/$my_mail_raw_relative_path\\/$my_box_relative_path/ and \
+folder:/$my_mail_raw_relative_path\\/eth/ and \
 " "query box"
 
 # compose {{{
 source "$my_conf_neomutt/box/common/compose.conf"
 
-set my_mail_addr = "shenchen@ethz.ch"
-set from = "$my_mail_addr"
-my_hdr Reply-To: "$my_mail_addr"
+set from = "shenchen@ethz.ch"
+my_hdr Reply-To: "shenchen@ethz.ch"
 
 set sendmail = "$my_conf_dmail/msmtp.sh --account eth"
 # }}}
