feat(neomutt): cleanup&rework box-specific confs

--- a/raw/.config/neomutt/box/specific/eth.conf
+++ b/raw/.config/neomutt/box/specific/eth.conf
@@ -1,7 +1,10 @@
-# box {{{
 set folder = "$my_mail_raw_absolute_path/eth"
-set record = ""
-# }}}
+
+macro index /b "\
+<enter-command>\
+exec vfolder-from-query<Return>\
+folder:/$my_mail_raw_relative_path\\/eth/ and \
+" "notmuch folder:[eth]"
 
 macro index sb "\
 sm\
@@ -9,17 +12,12 @@ sm\
 <shell-escape>$my_conf_dmail/mbsync.sh test -- eth<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
-" "push to remote"
+" "mbsync [eth]"
 
-macro index /b "\
-<enter-command>\
-exec vfolder-from-query<Return>\
-folder:/$my_mail_raw_relative_path\\/eth/ and \
-" "query box"
-
-# compose {{{
+# send {{{
 source "$my_conf_neomutt/box/common/compose.conf"
 
+set record = ""
 set from = "shenchen@ethz.ch"
 my_hdr Reply-To: "shenchen@ethz.ch"
 
