refactor(neomutt): separate reusable lib for multi-conf

--- a/raw/.config/neomutt/box/multi.conf
+++ b/raw/.config/neomutt/box/multi.conf
@@ -7,7 +7,7 @@ virtual-mailboxes \
 \"| gmail\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/gmail/\\..*/\" \
 <Return>\
 <check-stats>\
-" "box all"
+" "notmuch> show all"
 
 macro index cA "\
 <enter-command>\
@@ -18,7 +18,7 @@ unvirtual-mailboxes \
 \"notmuch://?query=folder:/$my_mail_raw_relative_path/gmail/\\..*/\" \
 <Return>\
 <check-stats>\
-" "unbox all"
+" "notmuch> hide all"
 
 folder-hook -noregex "$my_mail_raw_relative_path/xyz" "source \"$my_conf_neomutt/box/specific/xyz.conf\""
 folder-hook -noregex "| xyz" "source \"$my_conf_neomutt/box/specific/xyz.conf\""
@@ -29,4 +29,4 @@ folder-hook -noregex "| eth" "source \"$my_conf_neomutt/box/specific/eth.conf\""
 folder-hook -noregex "$my_mail_raw_relative_path/gmail" "source \"$my_conf_neomutt/box/specific/gmail.conf\""
 folder-hook -noregex "| gmail" "source \"$my_conf_neomutt/box/specific/gmail.conf\""
 
-# vim: filetype=neomuttrc foldmethod=marker
+# vim: filetype=neomuttrc
