feat(neomutt): port (most) reusable config to bash

--- a/raw/.config/neomutt/box/multi.conf
+++ b/raw/.config/neomutt/box/multi.conf
@@ -1,23 +1,21 @@
 macro index ca "\
-<enter-command>\
-virtual-mailboxes \
-\"| xyz\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/xyz/\\..*/\" \
-\"| outlook\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/outlook/\\..*/\" \
-\"| eth\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/eth/\\..*/\" \
-\"| gmail\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/gmail/\\..*/\" \
+<enter-command>virtual-mailboxes \
+\"| xyz\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\..*/\"' \
+\"| outlook\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\..*/\"' \
+\"| eth\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\..*/\"' \
+\"| gmail\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\..*/\"' \
 <Return>\
-<check-stats>\
+<check-stats><Return>\
 " "notmuch> show all"
 
 macro index cA "\
-<enter-command>\
-unvirtual-mailboxes \
-\"notmuch://?query=folder:/$my_mail_raw_relative_path/xyz/\\..*/\" \
-\"notmuch://?query=folder:/$my_mail_raw_relative_path/outlook/\\..*/\" \
-\"notmuch://?query=folder:/$my_mail_raw_relative_path/eth/\\..*/\" \
-\"notmuch://?query=folder:/$my_mail_raw_relative_path/gmail/\\..*/\" \
+<enter-command>unvirtual-mailboxes \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\..*/\"' \
 <Return>\
-<check-stats>\
+<check-stats><Return>\
 " "notmuch> hide all"
 
 folder-hook -noregex "$my_mail_raw_relative_path/xyz" "source \"$my_conf_neomutt/box/specific/xyz.conf\""
