--- a/raw/.config/neomutt/box/specific/outlook.conf
+++ b/raw/.config/neomutt/box/specific/outlook.conf
@@ -1,10 +1,9 @@
 set folder = "$my_mail_raw_absolute_path/outlook"
 
 macro index /b "\
-<enter-command>\
-exec vfolder-from-query<Return>\
-folder:/$my_mail_raw_relative_path\\/outlook/ and \
-" "notmuch folder:[outlook]"
+<enter-command>exec vfolder-from-query<Return>\
+folder:\"/$my_mail_raw_relative_path/outlook.*/\" and\
+" "notmuch> folder:[outlook]"
 
 macro index sb "\
 sm\
@@ -12,7 +11,7 @@ sm\
 <shell-escape>$my_conf_dmail/mbsync.sh test -- outlook<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
-" "mbsync [outlook]"
+" "mbsync> outlook"
 
 # send {{{
 source "$my_conf_neomutt/box/common/compose.conf"
