--- a/raw/.config/neomutt/box/specific/eth.conf
+++ b/raw/.config/neomutt/box/specific/eth.conf
@@ -1,10 +1,9 @@
 set folder = "$my_mail_raw_absolute_path/eth"
 
 macro index /b "\
-<enter-command>\
-exec vfolder-from-query<Return>\
-folder:/$my_mail_raw_relative_path\\/eth/ and \
-" "notmuch folder:[eth]"
+<enter-command>exec vfolder-from-query<Return>\
+folder:\"/$my_mail_raw_relative_path/eth.*/\" and\
+" "notmuch> folder:[eth]"
 
 macro index sb "\
 sm\
@@ -12,7 +11,7 @@ sm\
 <shell-escape>$my_conf_dmail/mbsync.sh test -- eth<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
-" "mbsync [eth]"
+" "mbsync> eth"
 
 # send {{{
 source "$my_conf_neomutt/box/common/compose.conf"
