--- a/raw/.config/neomutt/box/specific/gmail.conf
+++ b/raw/.config/neomutt/box/specific/gmail.conf
@@ -1,10 +1,9 @@
 set folder = "$my_mail_raw_absolute_path/gmail"
 
 macro index /b "\
-<enter-command>\
-exec vfolder-from-query<Return>\
-folder:/$my_mail_raw_relative_path\\/gmail/ and \
-" "notmuch folder:[gmail]"
+<enter-command>exec vfolder-from-query<Return>\
+folder:\"/$my_mail_raw_relative_path/gmail.*/\" and\
+" "notmuch> folder:[gmail]"
 
 macro index sb "\
 sm\
@@ -12,7 +11,7 @@ sm\
 <shell-escape>$my_conf_dmail/mbsync.sh test -- gmail<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
-" "mbsync [gmail]"
+" "mbsync> gmail"
 
 # send {{{
 source "$my_conf_neomutt/box/common/compose.conf"
