--- a/raw/.config/neomutt/box/specific/xyz.conf
+++ b/raw/.config/neomutt/box/specific/xyz.conf
@@ -1,10 +1,9 @@
 set folder = "$my_mail_raw_absolute_path/xyz"
 
 macro index /b "\
-<enter-command>\
-exec vfolder-from-query<Return>\
-folder:/$my_mail_raw_relative_path\\/xyz/ and \
-" "notmuch folder:[xyz]"
+<enter-command>exec vfolder-from-query<Return>\
+folder:\"/$my_mail_raw_relative_path/xyz.*/\" and\
+" "notmuch> folder:[xyz]"
 
 macro index sb "\
 sm\
@@ -12,7 +11,7 @@ sm\
 <shell-escape>$my_conf_dmail/mbsync.sh test -- xyz<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
-" "mbsync [xyz]"
+" "mbsync> xyz"
 
 # send {{{
 source "$my_conf_neomutt/box/common/compose.conf"
