--- a/raw/.config/neomutt/box/specific/xyz.conf
+++ b/raw/.config/neomutt/box/specific/xyz.conf
@@ -5,6 +5,45 @@ macro index /b "\
 folder:\"/$my_mail_raw_relative_path/xyz.*/\" and\
 " "notmuch> folder:[xyz]"
 
+macro index cb "\
+<enter-command>virtual-mailboxes \
+\"> xyz\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\..*/\"' \
+<Return>\
+<enter-command>unvirtual-mailboxes \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\..*/\"' \
+<Return>\
+<enter-command>virtual-mailboxes \
+\"  /INBOX\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.INBOX.*/\"' \
+\"  /SENT\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Sent.*/\"' \
+\"  /ARCHIVE\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Folders.x.*/\"' \
+\"  /Archive\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Archive.*/\"' \
+\"  /Drafts\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Drafts.*/\"' \
+\"  /Spam\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Spam.*/\"' \
+\"  /Starred\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Starred.*/\"' \
+\"  /Trash\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Trash.*/\"' \
+<Return>\
+<check-stats><Return>\
+" "notmuch> folder:[xyz]/*"
+
+macro index cB "\
+<enter-command>unvirtual-mailboxes \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.INBOX.*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Sent.*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Folders.x.*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Archive.*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Drafts.*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Spam.*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Starred.*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\.Trash.*/\"' \
+<Return>\
+<enter-command>unvirtual-mailboxes \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\..*/\"' \
+<Return>\
+ca\
+" "notmuch> folder:[xyz]/*"
+
 macro index sb "\
 sm\
 <enter-command>set wait_key=no<Return>\
