--- a/raw/.config/neomutt/box/multi.conf
+++ b/raw/.config/neomutt/box/multi.conf
@@ -1,19 +1,19 @@
 macro index ca "\
 <enter-command>virtual-mailboxes \
-\"| xyz\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\..*/\"' \
-\"| outlook\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\..*/\"' \
-\"| eth\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\..*/\"' \
-\"| gmail\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\..*/\"' \
+\"| xyz\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\\..*/\"' \
+\"| outlook\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\\..*/\"' \
+\"| eth\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\\..*/\"' \
+\"| gmail\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\\..*/\"' \
 <Return>\
 <check-stats><Return>\
 " "notmuch> show all"
 
 macro index cA "\
 <enter-command>unvirtual-mailboxes \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\..*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\..*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\..*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\\..*/\"' \
 <Return>\
 <check-stats><Return>\
 " "notmuch> hide all"
