fix(neomutt): notmuch-url for specific accounts

--- a/raw/.config/neomutt/box/specific/eth.conf
+++ b/raw/.config/neomutt/box/specific/eth.conf
@@ -2,62 +2,62 @@ set folder = "$my_mail_raw_absolute_path/eth"
 
 macro index /b "\
 <enter-command>exec vfolder-from-query<Return>\
-folder:\"/$my_mail_raw_relative_path/eth.*/\" and\
+folder:\"/$my_mail_raw_relative_path/eth/\\..*/\" and\
 " "notmuch> folder:[eth]"
 
 macro index cb "\
 <enter-command>virtual-mailboxes \
-\"> eth\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\..*/\"' \
+\"> eth\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\\..*/\"' \
 <Return>\
 <enter-command>unvirtual-mailboxes \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\..*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\..*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\\..*/\"' \
 <Return>\
 <enter-command>virtual-mailboxes \
-\"  /INBOX\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Sent Items.*/\"' \
-\"  /SENT\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Sent.*/\"' \
-\"  /ARCHIVE\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.x.*/\"' \
-\"  /Archive\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Archive.*/\"' \
-\"  /Calendar\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Calendar.*/\"' \
-\"  /Calendar.Birthdays\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Calendar.Birthdays.*/\"' \
-\"  /Contacts\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Contacts.*/\"' \
-\"  /Conversation History\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Conversation History.*/\"' \
-\"  /Deleted Items\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Deleted Items.*/\"' \
-\"  /Drafts\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Drafts.*/\"' \
-\"  /INBOX\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.INBOX.*/\"' \
-\"  /Journal\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Journal.*/\"' \
-\"  /Junk Email\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Junk Email.*/\"' \
-\"  /Notes\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Notes.*/\"' \
-\"  /Tasks\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Tasks.*/\"' \
-\"  /Trash\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Trash.*/\"' \
-\"  /Utkast\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Utkast.*/\"' \
+\"  /INBOX\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Sent Items/\"' \
+\"  /SENT\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Sent/\"' \
+\"  /ARCHIVE\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.x/\"' \
+\"  /Archive\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Archive/\"' \
+\"  /Calendar\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Calendar/\"' \
+\"  /Calendar.Birthdays\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Calendar.Birthdays/\"' \
+\"  /Contacts\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Contacts/\"' \
+\"  /Conversation History\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Conversation History/\"' \
+\"  /Deleted Items\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Deleted Items/\"' \
+\"  /Drafts\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Drafts/\"' \
+\"  /INBOX\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.INBOX/\"' \
+\"  /Journal\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Journal/\"' \
+\"  /Junk Email\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Junk Email/\"' \
+\"  /Notes\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Notes/\"' \
+\"  /Tasks\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Tasks/\"' \
+\"  /Trash\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Trash/\"' \
+\"  /Utkast\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Utkast/\"' \
 <Return>\
 <check-stats><Return>\
 " "notmuch> folder:[eth]/*"
 
 macro index cB "\
 <enter-command>unvirtual-mailboxes \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Sent Items.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Sent.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.x.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Archive.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Calendar.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Calendar.Birthdays.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Contacts.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Conversation History.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Deleted Items.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Drafts.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.INBOX.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Journal.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Junk Email.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Notes.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Tasks.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Trash.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\.Utkast.*/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Sent Items/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Sent/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.x/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Archive/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Calendar/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Calendar.Birthdays/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Contacts/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Conversation History/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Deleted Items/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Drafts/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.INBOX/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Journal/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Junk Email/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Notes/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Tasks/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Trash/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/eth/.Utkast/\"' \
 <Return>\
 <enter-command>unvirtual-mailboxes \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\\..*/\"' \
 <Return>\
 ca\
 " "notmuch> folder:[eth]/*"
