--- a/raw/.config/neomutt/box/specific/gmail.conf
+++ b/raw/.config/neomutt/box/specific/gmail.conf
@@ -2,32 +2,32 @@ set folder = "$my_mail_raw_absolute_path/gmail"
 
 macro index /b "\
 <enter-command>exec vfolder-from-query<Return>\
-folder:\"/$my_mail_raw_relative_path/gmail.*/\" and\
+folder:\"/$my_mail_raw_relative_path/gmail/\\..*/\" and\
 " "notmuch> folder:[gmail]"
 
 macro index cb "\
 <enter-command>virtual-mailboxes \
-\"> gmail\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\..*/\"' \
+\"> gmail\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\\..*/\"' \
 <Return>\
 <enter-command>unvirtual-mailboxes \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\..*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\..*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\\..*/\"' \
 <Return>\
 <enter-command>virtual-mailboxes \
-\"  /INBOX\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\.[Gmail].E-mails enviados.*/\"' \
-\"  /SENT\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\.Sent.*/\"' \
+\"  /INBOX\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/gmail/.[Gmail].E-mails enviados/\"' \
+\"  /SENT\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/gmail/.Sent/\"' \
 <Return>\
 <check-stats><Return>\
 " "notmuch> folder:[gmail]/*"
 
 macro index cB "\
 <enter-command>unvirtual-mailboxes \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\.[Gmail].E-mails enviados.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\.Sent.*/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/gmail/.[Gmail].E-mails enviados/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/gmail/.Sent/\"' \
 <Return>\
 <enter-command>unvirtual-mailboxes \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\\..*/\"' \
 <Return>\
 ca\
 " "notmuch> folder:[gmail]/*"
