--- a/raw/.config/neomutt/box/specific/outlook.conf
+++ b/raw/.config/neomutt/box/specific/outlook.conf
@@ -2,50 +2,50 @@ set folder = "$my_mail_raw_absolute_path/outlook"
 
 macro index /b "\
 <enter-command>exec vfolder-from-query<Return>\
-folder:\"/$my_mail_raw_relative_path/outlook.*/\" and\
+folder:\"/$my_mail_raw_relative_path/outlook/\\..*/\" and\
 " "notmuch> folder:[outlook]"
 
 macro index cb "\
 <enter-command>virtual-mailboxes \
-\"> outlook\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\..*/\"' \
+\"> outlook\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\\..*/\"' \
 <Return>\
 <enter-command>unvirtual-mailboxes \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\..*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\..*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/gmail/\\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/xyz/\\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/eth/\\..*/\"' \
 <Return>\
 <enter-command>virtual-mailboxes \
-\"  /INBOX\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.INBOX.*/\"' \
-\"  /SENT\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Sent.*/\"' \
-\"  /ARCHIVE\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.x.*/\"' \
-\"  /Archive\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Archive.*/\"' \
-\"  /Deleted\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Deleted.*/\"' \
-\"  /Drafts\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Drafts.*/\"' \
-\"  /Junk\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Junk.*/\"' \
-\"  /Notes\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Notes.*/\"' \
-\"  /Problèmes de synchronisation\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Problèmes de synchronisation.*/\"' \
-\"  /Problèmes de synchronisation.Conflits\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Problèmes de synchronisation.Conflits.*/\"' \
-\"  /Problèmes de synchronisation.Échecs du serveur\" 'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Problèmes de synchronisation.Échecs du serveur.*/\"' \
+\"  /INBOX\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.INBOX/\"' \
+\"  /SENT\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Sent/\"' \
+\"  /ARCHIVE\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.x/\"' \
+\"  /Archive\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Archive/\"' \
+\"  /Deleted\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Deleted/\"' \
+\"  /Drafts\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Drafts/\"' \
+\"  /Junk\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Junk/\"' \
+\"  /Notes\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Notes/\"' \
+\"  /Problèmes de synchronisation\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Problèmes de synchronisation/\"' \
+\"  /Problèmes de synchronisation.Conflits\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Problèmes de synchronisation.Conflits/\"' \
+\"  /Problèmes de synchronisation.Échecs du serveur\" 'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Problèmes de synchronisation.Échecs du serveur/\"' \
 <Return>\
 <check-stats><Return>\
 " "notmuch> folder:[outlook]/*"
 
 macro index cB "\
 <enter-command>unvirtual-mailboxes \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.INBOX.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Sent.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.x.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Archive.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Deleted.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Drafts.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Junk.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Notes.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Problèmes de synchronisation.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Problèmes de synchronisation.Conflits.*/\"' \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\.Problèmes de synchronisation.Échecs du serveur.*/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.INBOX/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Sent/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.x/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Archive/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Deleted/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Drafts/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Junk/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Notes/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Problèmes de synchronisation/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Problèmes de synchronisation.Conflits/\"' \
+'notmuch://?query=folder:\"$my_mail_raw_relative_path/outlook/.Problèmes de synchronisation.Échecs du serveur/\"' \
 <Return>\
 <enter-command>unvirtual-mailboxes \
-'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\..*/\"' \
+'notmuch://?query=folder:\"/$my_mail_raw_relative_path/outlook/\\..*/\"' \
 <Return>\
 ca\
 " "notmuch> folder:[outlook]/*"
