chore(neomutt): reformat constants

--- a/raw/.config/neomutt/conf/read.conf
+++ b/raw/.config/neomutt/conf/read.conf
@@ -2,7 +2,7 @@ auto_view text/plain text/html
 
 alternative_order text/plain text/* image/*
 
-set header_cache = "$HOME/.cache/neomutt/"
+set header_cache = "$HOME/.cache/neomutt"
 
 # REF:
 #   https://github.com/neomutt/neomutt/issues/1014
