--- a/raw/.config/neomutt/definition.conf
+++ b/raw/.config/neomutt/definition.conf
@@ -1,5 +1,5 @@
-set my_conf_root = "$HOME/.config/"
-set my_conf_neomutt = "$my_conf_root/neomutt/"
+set my_conf_root = "$HOME/.config"
+set my_conf_neomutt = "$my_conf_root/neomutt"
 
 set my_conf_dmail = "~/dot/dot/d_mail/src"
 
