feat(neomutt): generate startup-hook

--- a/raw/.config/neomutt/box/multi.conf
+++ b/raw/.config/neomutt/box/multi.conf
@@ -18,6 +18,8 @@ macro index cA "\
 <check-stats><Return>\
 " "notmuch> hide all"
 
+startup-hook "source \"$my_conf_neomutt/box/specific/xyz.conf\""
+
 folder-hook -noregex "$my_mail_raw_relative_path/xyz" "source \"$my_conf_neomutt/box/specific/xyz.conf\""
 folder-hook -noregex "| xyz" "source \"$my_conf_neomutt/box/specific/xyz.conf\""
 folder-hook -noregex "$my_mail_raw_relative_path/outlook" "source \"$my_conf_neomutt/box/specific/outlook.conf\""
