--- a/raw/.config/neomutt/box/common/notmuch.conf
+++ b/raw/.config/neomutt/box/common/notmuch.conf
@@ -4,14 +4,15 @@ set nm_default_url = "notmuch://$HOME/.local/share/notmuch/default"
 set hidden_tags = \
 "_ATTACHMENT,_SIGNED,_ENCRYPTED,\
 unread,replied,draft,flagged,passed,\
-_SYS,_X,\
+_SYS,_X,_TAGGED,\
 _SENT"
 
 virtual-mailboxes \
     "MAIN" "notmuch://?query=tag:MAIN
 virtual-mailboxes \
     "LOCAL" "notmuch://?query=folder:\"/$my_mail_all_relative_path/\\..*/\"" \
-    "| x" "notmuch://?query=folder:$my_mail_all_relative_path/.x/" \
+    "| x" "notmuch://?query=tag:_TAGGED" \
+    "| x?" "notmuch://?query=tag:_UNTAGGED" \
     "| hold" "notmuch://?query=folder:$my_mail_all_relative_path/.hold/" \
     "| trash" "notmuch://?query=folder:$my_mail_all_relative_path/.trash/"
 virtual-mailboxes \
