feat(notmuch): separate tag/untag from local/remote

--- a/raw/.config/neomutt/box/common/notmuch.conf
+++ b/raw/.config/neomutt/box/common/notmuch.conf
@@ -4,18 +4,18 @@ set nm_default_url = "notmuch://$HOME/.local/share/notmuch/default"
 set hidden_tags = \
 "_ATTACHMENT,_SIGNED,_ENCRYPTED,\
 unread,replied,draft,flagged,passed,\
-_SYS,_X,_TAGGED,\
+_SYS,_X,_LOCAL,_TAGGED,\
 _SENT"
 
 virtual-mailboxes \
     "MAIN" "notmuch://?query=tag:MAIN
 virtual-mailboxes \
-    "LOCAL" "notmuch://?query=folder:\"/$my_mail_all_relative_path/\\..*/\"" \
-    "| x" "notmuch://?query=tag:_TAGGED" \
-    "| x?" "notmuch://?query=tag:_UNTAGGED" \
+    "LOCAL" "notmuch://?query=tag:_LOCAL" \
+    "| x" "notmuch://?query=tag:_LOCAL and tag:_TAGGED" \
+    "| x?" "notmuch://?query=tag:_LOCAL and tag:_UNTAGGED" \
     "| hold" "notmuch://?query=folder:$my_mail_all_relative_path/.hold/" \
     "| trash" "notmuch://?query=folder:$my_mail_all_relative_path/.trash/"
 virtual-mailboxes \
-    "REMOTE" "notmuch://?query=folder:\"/$my_mail_raw_relative_path/.*/\""
+    "REMOTE" "notmuch://?query=tag:_REMOTE"
 
 # vim: filetype=neomuttrc foldmethod=marker
