--- a/raw/.config/neomutt/box/common/notmuch.conf
+++ b/raw/.config/neomutt/box/common/notmuch.conf
@@ -4,7 +4,7 @@ set nm_default_url = "notmuch://$HOME/.local/share/notmuch/default"
 set hidden_tags = \
 "_ATTACHMENT,_SIGNED,_ENCRYPTED,\
 unread,replied,draft,flagged,passed,\
-_SYS,_X,_LOCAL,_TAGGED,\
+_LOCAL,_TAGGED,_ARCHIVE,\
 _SENT"
 
 virtual-mailboxes \
