chore(notmuch): cleanup hooks

--- a/raw/.config/neomutt/box/common/notmuch.conf
+++ b/raw/.config/neomutt/box/common/notmuch.conf
@@ -2,7 +2,7 @@ set nm_default_url = "notmuch://$HOME/.local/share/notmuch/default"
 
 # exclude these (implicit) tags from %g
 set hidden_tags = \
-"_ATTACHMENT,_SIGNED,_ENCRYPTED,\
+"__ATTACHMENT,__SIGNED,__ENCRYPTED,\
 unread,replied,draft,flagged,passed,\
 _LOCAL,_TAGGED,_ARCHIVE,\
 _SENT"
