--- a/raw/.config/neomutt/conf/visual.conf
+++ b/raw/.config/neomutt/conf/visual.conf
@@ -36,33 +36,29 @@ set index_format = "\
 "
 
 # notmuch {{{
-# reference-name {{{
+# alias
 tag-formats \
-    "_ATTACHMENT" "GA" \
-    "_SIGNED" "GS" \
-    "_ENCRYPTED" "GE"
-
+    "__ATTACHMENT" "GA" \
+    "__SIGNED" "GS" \
+    "__ENCRYPTED" "GE"
 tag-formats \
     "unread" "GU" \
     "flagged" "GF" \
     "draft" "GD" \
     "replied" "GR" \
     "passed" "GP"
-# }}}
 
-# display {{{
+# display
 tag-transforms \
-    "_ATTACHMENT" "A" \
-    "_SIGNED" "S" \
-    "_ENCRYPTED" "E"
-
+    "__ATTACHMENT" "A" \
+    "__SIGNED" "S" \
+    "__ENCRYPTED" "E"
 tag-transforms \
     "unread" "U" \
     "flagged" "F" \
     "draft" "D" \
     "replied" "R" \
     "passed" "P"
-# }}}
 # }}}
 
 set status_chars = " +xA"
